--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,7 @@
 	text-shadow: 0 -1px 0 rgba(0,0,0,0.25);
 }
 
+
 .navbar{
 	min-width:320px;
 }
@@ -36,7 +37,7 @@
 		margin:18px auto 0;
 	}
 	#ascensorBuilding > section > .content {
-		padding-left:170px;
+		padding-left:25%;
 		padding-top:50px;
 	}		
 }
